# Blood_Report_Analyzer

./: .env.example  ACKNOWLEDGMENT.md  CONFIG.md  OUTPUT.md  README.md  agents.py  main.py  pyproject.toml  tasks.py
llm_configure/: Llama2Modelfile  MistralModelfile
tools/: search_tools.py  summarise_tools.py
